--- a/templates/base.html
+++ b/templates/base.html
@@ -4,21 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Base for now</title>
+    <title> {% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 
 <body>
-    <h1> List of Users</h1>
-
-    <ul>
-        {%for user in users%}
-        <li><a>{{user}}</a></li>
-
-        <li> {{user.full_name}}</li>
-
-        {%endfor%}
-
-    </ul>
+    <div class="container col-12 mt-4">
+        {% block content %} {% endblock %}
+    </div>
 </body>
 
 </html>
