--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
-
-{ % block title %} Edit {{user.full_name}} {% endblock %}
+{% block title %} {{user.full_name}} {% endblock %}
 
 {% block content %}
 
